# devops-practice

./: .gitignore
Advance-proj-phase-1/: CLAUDE.md  README.md  pyproject.toml  requirements.txt  rest_app.py  scripts.py
Assignment 2/ex1/: docker hub link.txt  getUser.py
Assignment 2/extra/ex5/: app.py  (+1 more)
Docker assignment 2/ex1/: Dockerfile  getUser.py
Final project phase 1/: .dockerignore  Dockerfile  README.md  docker-compose.yaml
Final project phase 2/: .dockerignore  README.md  build-deploy.sh  deploy.yaml  diag.sh  docker-compose.yaml  earthquake-secret.yaml
Kuberentes assignment 3/assignment 1/: deployment.yaml
Kuberentes assignment 3/bonus/: deployment.yaml
Kubernetes 2 assignment 4/ex1/: pv.yaml
Kubernetes 2 assignment 4/ex2/: deployment.yaml
Kubernetes 2 assignment 4/ex3/: app.py  flask-hpa.yaml
Kubernetes 2 assignment 4/ex5/: nginx.conf
WorldOfGames-level-1/: Live.py
WorldOfGames-level-2/: CurrencyRouletteGame.py  GuessGame.py  Live.py  MemoryGame.py  requierments.txt
archive/Advance-proj-phase-1/: .gitignore  db_connector.py  pyproject.toml  rest_app.py
assignment solutions/Helm assignment 5/: mychart-0.1.0.tgz
assignment solutions/Monitoring assignment 9/: AGENTS.md  CLAUDE.md  README.md  argocd.yaml  cleanup.ps1  cleanup.sh  deploy.ps1  deploy.sh  grafana-dashboard-backup.json  grafana-dashboard.json  healthcheck.ps1  prometheus.yml  status.ps1
assignment solutions/Terraform assignment 11/: README.md  main.tf  output.tf  providers.tf  variables.tf
class5/helmclass0107/: commands.txt  mychart-0.1.0.tgz
class7/: comments.txt
(+59 files in other folders)
